# simple-ws-chat

./: .dockerignore  Dockerfile  README.md  docker-compose.yml
chatroom-backend/: CMakeLists.txt
chatroom-backend/src/: main.cpp
chatroom-static/: index.html  package-lock.json  package.json
chatroom-static/src/: main.ts
